src/z80asm/z80asm2/t/20-preproc/expected/defvars_19.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_19.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/20-preproc/input/defvars_19.asm...
t/20-preproc/input/defvars_19.asm:1:1: error: DEFVARS -1 with no previous non-zero DEFVARS
    defvars -1
    ^
# file: t/20-preproc/input/defvars_19.asm
EndOfLine	"\n"	7:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
symbol	__FLOAT_GENMATH__	1	(defined at )
